--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
   "author": "GNP",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5"
   }
 }
