frontend: working on map

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,12 @@
   "author": "GNP",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
