--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "Provides an API for stats and map of the spread of corona virus.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon server.js"
   },
   "keywords": [
     "corona",
@@ -17,7 +18,10 @@
   "author": "GNP",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
+    "crono": "0.0.3",
     "express": "^4.17.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.5"
