--- a/backend/package.json
+++ b/backend/package.json
@@ -22,9 +22,12 @@
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "crono": "0.0.3",
+    "csvtojson": "^2.0.10",
     "express": "^4.17.1",
+    "node-worker-threads-pool": "^1.1.2",
     "request": "^2.88.0",
-    "request-promise": "^4.2.5"
+    "request-promise": "^4.2.5",
+    "worker-thread": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
