--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,18 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "csv-parse": "^4.8.5",
+    "csv-parser": "^2.3.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-multi-carousel": "^2.5.0",
+    "react-responsive-carousel": "^3.1.51",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.3.1",
     "react-simple-maps": "^0.12.1",
-    "react-slick": "^0.25.2"
+    "react-slick": "^0.25.2",
+    "recharts": "^2.0.0-beta.1"
   },
   "scripts": {
     "start": "react-scripts start",
