--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "crono": "0.0.3",
+    "csv-parse": "^4.8.6",
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
     "node-worker-threads-pool": "^1.1.2",
